add pagination in html

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-    
+
     {% include 'recipes/partials/header.html' %}
     {% include 'recipes/partials/search.html' %}
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
            {% block content %}
+            
            {% endblock content %}
         </div>
+
+        {% include 'recipes/partials/pagination.html' %}
     </main>
 
    {% include 'recipes/partials/footer.html' %}
